--- a/test.html
+++ b/test.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./test.html">
-        <p>Hello World!</p>
+    <p>This is test.html</p>
+    <a href="./index.html">
+        <p>Back to index.html</p>
     </a>
 </body>
 </html>
