--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <a href="./test.html">
         <p>Hello World!</p>
     </a>
+
+    <button type="button" onclick="sessionStorage.setItem('name', 'tacie')">Click me</button>
 </body>
 </html>
