--- a/test.html
+++ b/test.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        var name = sessionStorage.getItem("name");
-    </script>
+    <script src="./index.js"></script>
 </head>
 <body>
-    <p>This is test.html</p>
-    <a href="./index.html">
-        <p>Back to index.html</p>
-    </a>
+    <div id="content">
+
+    </div>
 </body>
 </html>
