--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <p>Hello World!</p>
     </a>
 
-    <button type="button" onclick="sessionStorage.setItem('name', 'tacie')">Click me</button>
+    <button type="button" onclick="sessionStorage.setItem('name', 'tacie')">Create Session</button>
 </body>
 </html>
